# Clerk

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  charset.env  eslint.config.js  index.html  package.json  pnpm-lock.yaml  test.env  tsconfig.json  tsconfig.node.json  vite.config.ts
RELEASES/: v1.1.0.md
docs/: BUILD_GUIDE.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  build.ps1  build.sh  fix-colors.py  generate-windows-icons.js  release.js
src/: App.tsx  version.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  shell.json
src-tauri/src/: cli.rs  lib.rs
src-tauri/src/commands/: audit.rs  backup.rs  database.rs  export.rs  mod.rs  system.rs  vault.rs
src-tauri/src/crypto/: encryption.rs  key_derivation.rs  mod.rs
src-tauri/src/database/: migrations.rs  mod.rs  schema.rs
src-tauri/src/database/operations/: audit.rs  environments.rs  mod.rs  projects.rs  variables.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/vault/: mod.rs
src/api/: backup.ts
src/components/: AppIcon.css  AppIcon.tsx  AuditLog.css  AuditLog.tsx  BackupModal.css  BackupModal.tsx  DeleteConfirmModal.css  DeleteConfirmModal.tsx  EnvironmentModal.css  EnvironmentModal.tsx  EnvironmentSection.css  EnvironmentSection.tsx  ExportModal.css  ExportModal.tsx  ProjectModal.css  ProjectModal.tsx  RestoreModal.css  RestoreModal.tsx  SettingsModal.css  SettingsModal.tsx  Skeleton.css  Skeleton.tsx  Toast.css  Toast.tsx  UpdateChecker.css  UpdateChecker.tsx  VariableList.css  VariableList.tsx  VariableModal.css  VariableModal.tsx  VaultCreation.css  VaultCreation.tsx  VaultDashboard.css  VaultDashboard.tsx  VaultUnlock.css  VaultUnlock.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useDebounce.ts  useInactivityTimer.ts  useKeyboardShortcuts.ts
src/styles/: App.css  dark-mode.css
src/types/: database.ts  errors.ts  index.ts  services.ts  vault.ts
(+5 files in other folders)
