[package]
name = "app"
version = "1.0.0"
description = "Clerk - Secure Environment Variable Manager"
authors = ["Cemil İlkim Teke <cemililkimteke5934@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Cryptography
ring = "0.17"                    # AES-256-GCM encryption, PBKDF2
argon2 = "0.5"                   # Argon2id key derivation (more secure than PBKDF2)
zeroize = "1.7"                  # Securely zero memory (passwords, keys)
base64 = "0.22"                  # Base64 encoding for encrypted data

# Security
keyring = { version = "3.6", features = ["windows-native", "apple-native", "linux-native"] }  # OS keychain integration with native backends

# Database
rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite with bundled library
thiserror = "2.0"                # Error handling macros

# System / PATH management (Windows)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"                  # Windows registry access
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }  # Windows API for broadcasting changes

# Utilities
chrono = "0.4"                   # Date/time handling
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
rpassword = "7.3"                # Password input without echo
dirs = "6.0"                     # Cross-platform directory paths

[[bin]]
name = "clerk"
path = "src/cli.rs"
